--- a/윤현서/assignment/week1/week1.html
+++ b/윤현서/assignment/week1/week1.html
@@ -50,7 +50,7 @@
                     <div> {this.state.first} + {this.state.second} </div>
                     <form onSubmit = {this.onSubmit}>
                         <input type = "number" value={this.state.value} onChange = {this.onChange} />
-                        <button>입력!</button>
+                        <button>입력</button>
                     </form>
                     <div>{this.state.result}</div>
                 </React.Fragment>
